@@ -1,8 +1,14 @@
-2021-10-01  Charlie Zender  <zender@uci.edu>
+2021-10-02  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.0.3-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.0.3-alpha02: Infrastructure';git push
 	git tag -a 5.0.3-alpha02 -m 'ppc dgr gbg';git push --tags
+
+	* PPQ: Use BFB identical constants as DCG19 and code in NCO implementation
+
+	* PPQ: Implement mnt_log10_tbl_prx in full 15-digit double precision
+
+2021-10-01  Charlie Zender  <zender@uci.edu>
 
 	* PPQ: Convert GBG from digit-based to bit-based, demonstrate viability
 
